# aeroeys-bluemind

./: README.md  YOLOE.ipynb  compute_similarity.py  detect_optimized.py  pyproject.toml  video_detection_mask.py
notebooks/: OWLv2.ipynb  YOLOE.ipynb
