[project]
name = "zaloai"
version = "0.1.0"
description = "zaloai"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "ultralytics>=8.3.223",
    "open-clip-torch>=2.26.1",
    "transformers>=4.57.1",
    "pillow>=12.0.0",
    "tqdm>=4.67.1",
]
